# MBU_GO_Hent_Afdelinger_Og_Sagsprofiler

./: README.md  pyproject.toml
robot_framework/: process.py
robot_framework/sub_processes/: data_handler.py  taxonomy.py  term_data_handler.py
